# gpuix

./: Cargo.toml  README.md  typos.toml
.zed/: settings.json
crates/gpui/: Cargo.toml
crates/gpui/examples/: hello_world.rs  window.rs
crates/gpui/src/: app.rs  platform.rs  window.rs
crates/gpui/src/platform/test/: window.rs
crates/gpui_wgpu/src/: cosmic_text_system.rs
crates/gpui_windows/src/: platform.rs  window.rs
crates/gpuix/: Cargo.toml
crates/gpuix/src/: lib.rs
crates/util/src/: rel_path.rs
