[package]
name = "gpuix"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"
description = "GPUI community fork - unified entry point for GPUI framework and platform abstractions"

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
font-kit = ["gpui/font-kit"]
test-support = ["gpui/test-support", "gpui_platform/test-support"]
inspector = ["gpui/inspector"]
leak-detection = ["gpui/leak-detection"]
wayland = ["gpui/wayland", "gpui_platform/wayland"]
x11 = ["gpui/x11", "gpui_platform/x11"]
screen-capture = ["gpui/screen-capture", "gpui_platform/screen-capture"]
windows-manifest = ["gpui/windows-manifest"]
runtime_shaders = ["gpui_platform/runtime_shaders"]

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
